--- a/app/views/profiles/_profile.html.haml
+++ b/app/views/profiles/_profile.html.haml
@@ -4,7 +4,7 @@
       = image_tag user.profile.avatar, id: 'profile_image', style: 'cursor: pointer;'
       = form_with(model: @profile, url: profile_path(@profile), method: :put, local: true, html: { multipart: true }) do |f|
         = f.file_field :avatar, id: "image_selector", style: "display: none;"
-        = f.submit "Save", id: "save_button", style: "display: none;"
+        = f.submit "Save", id: "save_button"#, style: "display: none;"
       -# %input#image_selector{ type: 'file', style: 'display: none;'}
       -# %input#image_selector{ type: 'file', style: 'display: none;' }
       -# %button#save_button{ style: 'display: none;' } 投稿
